--- a/css/report.css
+++ b/css/report.css
@@ -1,36 +1,41 @@
+
+
 /*字型*/
-.font-blod,.card-title {
-    font-family: MicrosoftJhengHeiBold,LiHei Pro;
+.font-blod,
+.card-title {
+    font-family: MicrosoftJhengHeiBold, LiHei Pro;
 }
-.font-regular,.card-text {
-    font-family: 微軟正黑體,Heiti TC;
+
+.font-regular,
+.card-text {
+    font-family: 微軟正黑體, Heiti TC;
 }
 
 /*檢驗報告上方title*/
-#ui_title_top{
-    color: #34d6b7; 
+#ui_title_top {
+    color: #34d6b7;
     font-size: 1.0em;
 }
 
-#ui_title_middle{
-    color: #404040; 
+#ui_title_middle {
+    color: #404040;
     font-size: 1.6em;
     margin: 5px 0px -10px 0px;
 }
 
-#ui_title_bottom{
-    color: #404040; 
+#ui_title_bottom {
+    color: #404040;
     font-size: 3.8em;
 }
 
 #ui_D_1 {
-    color: #36837b; 
+    color: #36837b;
     font-size: 1.4em;
     margin: -20px 0px 0px 0px;
 }
 
 #ui_D_2 {
-    color: #36837b; 
+    color: #36837b;
     font-size: 1.4em;
     margin: 10px 0px 40px 0px;
 }
@@ -133,7 +138,8 @@
 .card-title {
     margin: 0px 0px 20px 0px;
     /*title下方的margin*/
-    font-size: 1.4em/*title size*/
+    font-size: 1.4em
+        /*title size*/
 }
 
 /*限制文字行數不能超過2行，文字超過行數用...代替*/
@@ -227,13 +233,14 @@ li {
 
 @media (min-width: 992px) {
 
-	.card-title {
-		font-size: 1.3em;
-	}
+    .card-title {
+        font-size: 1.3em;
+    }
 
     .card-columns {
         column-count: 4;
     }
+
     .card-columns-header {
         column-count: 2;
     }
@@ -255,9 +262,9 @@ li {
     }
 
     /*C-1,C-2 內縮margin*/
-.card-grid-top .card-body {
-    /*margin: 0px 10px 0px 10px;*/
-}
+    .card-grid-top .card-body {
+        /*margin: 0px 10px 0px 10px;*/
+    }
 }
 
 @media (min-width: 1200px) {
@@ -265,7 +272,98 @@ li {
     /*.card-grid-top .card-body {
     margin: 0px 40px 0px 40px;*/
 }
-	.card-title {
-		font-size: 1.6em;
-	}
+
+.card-title {
+    font-size: 1.6em;
+}
+}
+
+
+/* Footer */
+/*@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');*/
+
+section {
+    padding: 60px 0;
+}
+
+section .section-title {
+    text-align: center;
+    color: #007b5e;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+
+#footer {
+    background: #345664 !important;
+}
+
+#footer h5 {
+    padding-left: 10px;
+    border-left: 3px solid #eeeeee;
+    padding-bottom: 6px;
+    margin-bottom: 20px;
+    color: #ffffff;
+}
+
+#footer a {
+    color: #ffffff;
+    text-decoration: none !important;
+    background-color: transparent;
+    -webkit-text-decoration-skip: objects;
+}
+
+#footer ul.social li {
+    padding: 3px 0;
+}
+
+#footer ul.social li a i {
+    margin-right: 5px;
+    font-size: 25px;
+    -webkit-transition: .5s all ease;
+    -moz-transition: .5s all ease;
+    transition: .5s all ease;
+}
+
+#footer ul.social li:hover a i {
+    font-size: 30px;
+    margin-top: -10px;
+}
+
+#footer ul.social li a,
+#footer ul.quick-links li a {
+    color: #ffffff;
+}
+
+#footer ul.social li a:hover {
+    color: #eeeeee;
+}
+
+#footer ul.quick-links li {
+    padding: 3px 0;
+    -webkit-transition: .5s all ease;
+    -moz-transition: .5s all ease;
+    transition: .5s all ease;
+}
+
+#footer ul.quick-links li:hover {
+    padding: 3px 0;
+    margin-left: 5px;
+    font-weight: 700;
+}
+
+#footer ul.quick-links li a i {
+    margin-right: 5px;
+}
+
+#footer ul.quick-links li:hover a i {
+    font-weight: 700;
+}
+
+@media (max-width:767px) {
+    #footer h5 {
+        padding-left: 0;
+        border-left: transparent;
+        padding-bottom: 0px;
+        margin-bottom: 10px;
+    }
 }
