--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,20 @@
-/*Bootstrap Contact Form*/
 
-body{
-    /*background: -webkit-linear-gradient(left, #0072ff, #00c6ff);*/
+/*字型*/
+.font-blod {
+    font-family: MicrosoftJhengHeiBold, LiHei Pro;
 }
+
+.font-regular {
+    font-family: 微軟正黑體, Heiti TC;
+}
+
+/*input[type=radio] {
+    border: 0px;
+    width: 100%;
+    height: 2em;
+}*/
+
+/*Bootstrap Contact Form*/
 .contact-form{
     background: #fff;
     margin-bottom: 5%;
@@ -18,7 +30,7 @@ body{
 	color: #3b5562;
 }
 
-h3 ,p{
+contactus{
 	color: #3b5562;
 }
 
@@ -44,3 +56,75 @@ h3 ,p{
     color: #fff;
     cursor: pointer;
 }
+
+.radio-header-box {
+	background-color: #3b5562;
+	color: white;
+	width: 100%;
+	display:inline-block;  /*讓div可以置中*/
+}
+
+.radio-box {
+	border-color: #5ea8a9; 
+	border-width: 1px; 
+	border-style:solid;
+	width: 100%;
+	display:inline-block;  /*讓div可以置中*/
+}
+.radio-title-hint {
+    font-size: 0.6em;
+    color: #5ea8a9;
+}
+.radio-title {
+    font-size: 1.2em;
+    color: black;
+}
+
+.radio-level {
+    font-size: 0.6em;
+}
+
+.radio-number {
+    font-size: 1.0em;
+}
+
+
+
+@media (min-width: 576px) {}
+
+@media (min-width: 768px) {}
+
+@media (min-width: 992px) {
+/*radio button div*/
+
+.radio-header-box {
+	width: 80%;
+}
+.radio-box {
+	width: 80%;
+}
+
+
+
+.radio-title-hint {
+    font-size: 1.0em;
+}
+
+.radio-title {
+    font-size: 2.0em;
+    color: black;
+}
+
+.radio-level {
+    font-size: 1.0em;
+}
+
+.radio-number {
+    font-size: 2.2em;
+}
+}
+
+@media (min-width: 1200px) {
+
+}
+
