fix: 修正12宮格，P標籤不用粗體字

--- a/css/report4.css
+++ b/css/report4.css
@@ -2,8 +2,8 @@
 
 /*粗體*/
 .font-blod,
-.card-title,
-p  {
+.card-title
+{
     font-family: "Microsoft JhengHei UI Bold", "Microsoft JhengHei Bold" , LiHei Pro;
 }
 
