--- a/css/report5.css
+++ b/css/report5.css
@@ -1,17 +1,23 @@
 /*字型*/
 
+/*細體*/
+/*.font-regular,
+.card-text,
+{
+    font-family: Microsoft JhengHei,微軟正黑體,Heiti TC;
+}*/
+
+*{
+    font-family: Microsoft JhengHei,微軟正黑體,Heiti TC;
+}
+
+
 /*粗體*/
 .font-blod,
 .card-title
 {
     font-family: Microsoft JhengHei,LiHei Pro;
-}
-
-/*細體*/
-.font-regular,
-.card-text,
-{
-    font-family: Microsoft JhengHei,微軟正黑體,Heiti TC;
+    font-weight:bold;
 }
 
 /*一般字體*/
