--- a/css/report5.css
+++ b/css/report5.css
@@ -1,22 +1,12 @@
 /*字型*/
-
-/*細體*/
-/*.font-regular,
-.card-text,
-{
-    font-family: Microsoft JhengHei,微軟正黑體,Heiti TC;
-}*/
-
 *{
-    font-family: Microsoft JhengHei,微軟正黑體,Heiti TC;
+    font-family: Microsoft JhengHei,Heiti TC;
 }
-
 
 /*粗體*/
 .font-blod,
 .card-title
 {
-    font-family: Microsoft JhengHei,LiHei Pro;
     font-weight:bold;
 }
 
