--- a/css/report5.css
+++ b/css/report5.css
@@ -179,12 +179,13 @@
     /*columns之間的距離*/
 }
 
-.card-columns>.card {
+
+.card-columns>div>.card {
     margin: 0;
     /*row之間的距離*/
     border-color: #34d6b7;
     border-radius: 0;
-    border-width: 3px;
+    /*border-width: 2px;*/
 }
 
 
@@ -222,18 +223,68 @@
     }
 
     .card-grid-middle-large {
-        min-height: 354px;
-        max-height: 354px;
+        min-height: 361px;
+        max-height: 361px;
     }
 
     .card-grid-middle-small {
-        min-height: 230px;
-        max-height: 230px;
+        min-height: 234px;
+        max-height: 234px;
     }
 
     /*C-1,C-2 內縮margin*/
     .card-grid-top .card-body {
         /*margin: 0px 10px 0px 10px;*/
+    }
+
+
+    /*顯示12宮格邊框，減少粗細問題*/
+    #card-C-1{
+        border-width: 8px 8px 8px 1px;
+    }
+
+    #card-C-2{
+        border-width: 8px 1px 8px 8px;
+    }
+
+    #card-A-1{
+        border-width: 8px 1px 1px 8px;
+    }
+
+    #card-A-2{
+        border-width: 1px 1px 8px 8px;
+    }
+
+    #card-A-3{
+        border-width: 8px 8px 1px 1px;
+    }
+
+    #card-A-4{
+        border-width: 1px 8px 1px 1px;
+    }
+
+    #card-A-5{
+        border-width: 1px 8px 8px 1px;
+    }
+
+    #card-B-1{
+        border-width: 8px 8px 1px 1px;
+    }
+
+    #card-B-2{
+        border-width: 1px 8px 8px 1px;
+    }
+
+    #card-B-3{
+        border-width: 8px 1px 1px 8px;
+    }
+
+    #card-B-4{
+        border-width: 1px 1px 1px 8px;
+    }
+
+    #card-B-5{
+        border-width: 1px 1px 8px 8px;
     }
 }
 
