--- a/css/report6.css
+++ b/css/report6.css
@@ -310,7 +310,7 @@ section .section-title {
 }
 
 #footer {
-    background: #345664 !important;
+    background: #04405A !important;
 }
 
 #footer h5 {
