--- a/css/index6.css
+++ b/css/index6.css
@@ -81,7 +81,7 @@
 }*/
 
 .radio-header-box {
-    background-color: #3b5562;
+    background-color: #04405A;
     color: white;
     width: 100%;
     display: inline-block;
