--- a/css/index6.css
+++ b/css/index6.css
@@ -12,15 +12,15 @@
 }
 
 .group-color-page2{
-    color: #42aaaa;
+    color: #61B6CA;
 }
 
 .group-color-page3{
-    color: #ff665c;
+    color: #F0907D;
 }
 
 .group-color-page4{
-    color: #7095c1;
+    color: #499DD2;
 }
 
 #page2-radio-header-title,
