--- a/css/index6.css
+++ b/css/index6.css
@@ -89,7 +89,7 @@
 }
 
 .radio-box {
-    border-color: #5ea8a9;
+    border-color: #815ea9;
     border-width: 1px;
     border-style: solid;
     width: 100%;
