--- a/css/report6.css
+++ b/css/report6.css
@@ -183,7 +183,7 @@
 .card-columns>div>.card {
     margin: 0;
     /*row之間的距離*/
-    border-color: #34d6b7;
+    border-color: #61C5D5;
     border-radius: 0;
     /*border-width: 2px;*/
 }
