--- a/css/report6.css
+++ b/css/report6.css
@@ -183,7 +183,7 @@
 .card-columns>div>.card {
     margin: 0;
     /*row之間的距離*/
-    border-color: #04405A;
+    border-color: #64D7DE;
     border-radius: 0;
     /*border-width: 2px;*/
 }
