--- a/css/report6.css
+++ b/css/report6.css
@@ -61,7 +61,7 @@
 #card-B-1,
 #card-A-1>.card-body>.card-text:after,
 #card-B-1>.card-body>.card-text:after {
-    background-color: #E9F6FF;
+    background-color: #f7fdff;
 }
 
 #card-A-2,
