--- a/css/report6.css
+++ b/css/report6.css
@@ -68,7 +68,7 @@
 #card-B-2,
 #card-A-2>.card-body>.card-text:after,
 #card-B-2>.card-body>.card-text:after {
-    background-color: #d9f1d6;
+    background-color: #f1fff0;
 }
 
 #card-A-3,
