--- a/css/report6.css
+++ b/css/report6.css
@@ -512,7 +512,7 @@ li{
     list-style-position:inside;
     list-style-type: decimal;
 }
-.cardB {
+p .cardB {
     margin-left: 8px;
     margin-top: 6px;
 }
