--- a/css/report6.css
+++ b/css/report6.css
@@ -491,6 +491,8 @@ section .section-title {
     padding: 2px;
     color: #04405A;
     border-radius: 8px;
+    margin-bottom: 14px;
+    margin-top: 10px;
 }
 .decVideo{
     background-color: #d7ede9;
@@ -512,7 +514,7 @@ li{
     list-style-position:inside;
     list-style-type: decimal;
 }
-p .cardB {
-    margin-left: 8px;
-    margin-top: 6px;
+p {
+    margin-top: 10px;
+    margin-bottom: 4px;
 }
